ggplot2 0.9 (2009-XX-XX) ----------------------------------------

* stat_quantile: correctly group results
* annotate: adds layers with legend = FALSE
* add log + 1 transformer (contributed by Jean-Olivier Irisson)